# orm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
.github/workflows/: build.yml  orm-strict-ci.yml
cmake/: MySQLCppConnAlias.cmake  VixOrmConfig.cmake.in
config/: config.dev.json
docs/: overview.md
examples/: CMakeLists.txt  batch_insert_tx.cpp  error_handling.cpp  http_orm_env_showcase.cpp  migrate_init.cpp  querybuilder_update.cpp  repository_crud_full.cpp  tx_unit_of_work.cpp  users_crud.cpp
include/vix/orm/: ConnectionPool.hpp  Database.hpp  Drivers.hpp  Entity.hpp  Errors.hpp  FileMigrationsRunner.hpp  Mapper.hpp  Migration.hpp  MigrationsRunner.hpp  MySQLDriver.hpp  QueryBuilder.hpp  Repository.hpp  Sha256.hpp  Transaction.hpp  UnitOfWork.hpp  all.hpp  db_compat.hpp  orm.hpp
src/: ConnectionPool.cpp  Database.cpp  FileMigrationsRunner.cpp  Mapper.cpp  MigrationsRunner.cpp  MySQLDriver.cpp  QueryBuilder.cpp  Repository.cpp  Sha256.cpp  Transaction.cpp  UnitOfWork.cpp
tools/migrator/: MigratorCLI.cpp  MigratorCLI.hpp  main.cpp
